kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devday-app
  namespace: examples
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devday-app
  template:
    metadata:
      labels:
        app: devday-app
    spec:
      containers:
        - name: devday-app
          image: nrt.ocir.io/orasejapan/shukawam/devday-app:1.0.1
          ports:
            - name: api
              containerPort: 8501
      imagePullSecrets:
        - name: ocir-secret
