kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devday-service
  namespace: devday25
spec:
  selector:
    app: devday-app
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
